--- a/public_html/index.html
+++ b/public_html/index.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="Start your development with Mithil's landing page.">
-    <meta name="author" content="Devcrud">
+    <meta name="author" content="Mithil">
     <title>Mithil's Portfolio Landing page</title>
     
     <link rel="stylesheet" href="assets/vendors/themify-icons/css/themify-icons.css">
@@ -12,7 +12,6 @@
 	<link rel="stylesheet" href="assets/css/johndoe.css">
 </head>
 <body data-spy="scroll" data-target=".navbar" data-offset="40" id="home">
-    <a href="components.html" class="btn btn-primary btn-component" data-spy="affix" data-offset-top="600"><i class="ti-shift-left-alt"></i> Components</a>
     <header class="header">
         <div class="container">
             <div class="header-content">
@@ -130,17 +129,17 @@
                             </div>
                         </div>
                         <div class="card-body">
-                            <h6 class="title text-danger">Back-End Development</h6>
-                            <P>JavaScript</P>
-                            <P class="subtitle">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum recusandae, cupiditate ullam dolor ratione repellendus.aliquid repudiandae saepe!.</P>
-                            <hr>
                             <h6 class="title text-danger">Front-End Development</h6>
                             <P>HTML & CSS</P>
-                            <P class="subtitle">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum recusandae, cupiditate ullam dolor ratione repellendus.aliquid repudiandae saepe!.</P>
+                            <P class="subtitle">Expert at Web design and development using HTML and CSS.</P>
+                            <hr>
+                            <h6 class="title text-danger">Back-End Development</h6>
+                            <P>JavaScript</P>
+                            <P class="subtitle">At Intermediate level at using JavaScript as the Back-End.</P>
                             <hr>
                             <h6 class="title text-danger">Database Management</h6>
                             <P>MySQL & Firebase</P>
-                            <P class="subtitle">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum recusandae, cupiditate ullam dolor ratione repellendus.aliquid repudiandae saepe!.</P>
+                            <P class="subtitle">Expert at Firebase Database, Novice at Database Management using MySQL</P>
                         </div>
                     </div>
                 </div>
