--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                             <hr>
                             <h6 class="title text-danger">Back-End Development</h6>
                             <P>JavaScript</P>
-                            <P class="subtitle">At Intermediate level at using JavaScript as the Back-End.</P>
+                            <P class="subtitle">Intermediate level at using JavaScript as the Back-End.</P>
                             <hr>
                             <h6 class="title text-danger">Database Management</h6>
                             <P>MySQL & Firebase</P>
