--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 <h3 class="font-weight-light">Who am I ?</h3>
                 <span class="line mb-5"></span>
                 <h5 class="mb-3">A Full Stack Developer Located In Our Lovely Earth</h5>
-                <p class="mt-20">I'm Mithil a sophomore studying Computer Science and Engineering, passionate about taking on challenges and acquiring new skills. I love connecting with people, exchanging ideas, and spreading positivity.</p>
+                <p class="mt-20">I'm Mithil, a sophomore studying Computer Science and Engineering, passionate about taking on challenges and acquiring new skills. I love connecting with people, exchanging ideas, and spreading positivity.</p>
                 <button class="btn btn-outline-danger"><i class="icon-down-circled2 "></i>My Certificates</button>
             </div>
             <div class="col-lg-4 about-card">
