--- a/index.html
+++ b/index.html
@@ -158,11 +158,11 @@
                             <hr>
                             <h6 class="title text-danger">2020-2022</h6>
                             <P>High School</P>
-                            <P class="subtitle">I have completed my Schooling form my Atomic Energy Junior College, Tarapur.</P>
+                            <P class="subtitle">I have completed my Schooling from my Atomic Energy Junior College, Tarapur.</P>
                             <hr>
                             <h6 class="title text-danger">2008-2020</h6>
-                            <P>Scondary School</P>
-                            <P class="subtitle">I have completed my Schooling form my Atomic Energy Central School, Tarapur.</P>
+                            <P>Secondary School</P>
+                            <P class="subtitle">I have completed my Schooling from my Atomic Energy Central School, Tarapur.</P>
                             
                         </div>
                     </div>
