--- a/public_html/index.html
+++ b/public_html/index.html
@@ -40,7 +40,7 @@
                     </li>
                 </ul>
                 <ul class="navbar-nav brand">
-                    <img src="assets/imgs/me1.jpg" alt="" class="brand-img">
+                    <img src="assets/imgs/main.jpg" alt="" class="brand-img">
                     <li class="brand-txt">
                         <h5 class="brand-title">Mithil Mudaliyar</h5>
                         <div class="brand-subtitle">FullStack Developer</div>
