--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     </li>
                 </ul>
                 <ul class="navbar-nav brand">
-                    <img src="assets/imgs/me1.jpg" alt="" class="brand-img">
+                    <img src="assets/imgs/main.jpg" alt="" class="brand-img">
                     <li class="brand-txt">
                         <h5 class="brand-title">Mithil Mudaliyar</h5>
                         <div class="brand-subtitle">FullStack Developer</div>
@@ -66,7 +66,7 @@
                 <h3 class="font-weight-light">Who am I ?</h3>
                 <span class="line mb-5"></span>
                 <h5 class="mb-3">A Full Stack Developer Located In Our Lovely Earth</h5>
-                <p class="mt-20">I'm Mithil, a sophomore studying Computer Science and Engineering, passionate about taking on challenges and acquiring new skills. I love connecting with people, exchanging ideas, and spreading positivity.</p>
+                <p class="mt-20">I'm Mithil a sophomore studying Computer Science and Engineering, passionate about taking on challenges and acquiring new skills. I love connecting with people, exchanging ideas, and spreading positivity.</p>
                 <button class="btn btn-outline-danger"><i class="icon-down-circled2 "></i>My Certificates</button>
             </div>
             <div class="col-lg-4 about-card">
@@ -135,7 +135,7 @@
                             <hr>
                             <h6 class="title text-danger">Back-End Development</h6>
                             <P>JavaScript</P>
-                            <P class="subtitle">Intermediate level at using JavaScript as the Back-End.</P>
+                            <P class="subtitle">At Intermediate level at using JavaScript as the Back-End.</P>
                             <hr>
                             <h6 class="title text-danger">Database Management</h6>
                             <P>MySQL & Firebase</P>
@@ -158,11 +158,11 @@
                             <hr>
                             <h6 class="title text-danger">2020-2022</h6>
                             <P>High School</P>
-                            <P class="subtitle">I have completed my Schooling from my Atomic Energy Junior College, Tarapur.</P>
+                            <P class="subtitle">I have completed my Schooling form my Atomic Energy Juniour College, Tarapur.</P>
                             <hr>
                             <h6 class="title text-danger">2008-2020</h6>
-                            <P>Secondary School</P>
-                            <P class="subtitle">I have completed my Schooling from my Atomic Energy Central School, Tarapur.</P>
+                            <P>Scondary School</P>
+                            <P class="subtitle">I have completed my Schooling form my Atomic Energy Central School, Tarapur.</P>
                             
                         </div>
                     </div>
