--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     </li>
                 </ul>
                 <ul class="navbar-nav brand">
-                    <img src="assets/imgs/main.jpg" alt="" class="brand-img">
+                    <img src="imgs/main.jpg" alt="" class="brand-img">
                     <li class="brand-txt">
                         <h5 class="brand-title">Mithil Mudaliyar</h5>
                         <div class="brand-subtitle">FullStack Developer</div>
@@ -158,11 +158,11 @@
                             <hr>
                             <h6 class="title text-danger">2020-2022</h6>
                             <P>High School</P>
-                            <P class="subtitle">I have completed my Schooling form my Atomic Energy Juniour College, Tarapur.</P>
+                            <P class="subtitle">I have completed my Schooling from my Atomic Energy Juniour College, Tarapur.</P>
                             <hr>
                             <h6 class="title text-danger">2008-2020</h6>
-                            <P>Scondary School</P>
-                            <P class="subtitle">I have completed my Schooling form my Atomic Energy Central School, Tarapur.</P>
+                            <P>Secondary School</P>
+                            <P class="subtitle">I have completed my Schooling from my Atomic Energy Central School, Tarapur.</P>
                             
                         </div>
                     </div>
